--- a/barcodrod.io/Views/HistoryPage.xaml
+++ b/barcodrod.io/Views/HistoryPage.xaml
@@ -4,13 +4,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
     Loaded="LoadHistory"
     UseLayoutRounding="True">
     <Page.Resources>
         <MenuFlyout x:Name="ImageRightClickMenuBar">
-            <MenuFlyoutItem x:Name="CopyImageMenuButton" Text="Copy" Icon="Copy" ToolTipService.ToolTip="Copy Image"/>
-            <MenuFlyoutItem x:Name="OpenImageMenuButton" Text="Open" Icon="OpenWith" ToolTipService.ToolTip="Open Image File"/>
+            <MenuFlyoutItem x:Name="CopyImageMenuButton" Text="Copy" Icon="Copy" ToolTipService.ToolTip="Copy Image" />
+            <MenuFlyoutItem x:Name="OpenImageMenuButton" Text="Open" Icon="OpenWith"
+                            ToolTipService.ToolTip="Open Image File" />
         </MenuFlyout>
     </Page.Resources>
 
@@ -19,26 +20,29 @@
 
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="180"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="180" />
+            <ColumnDefinition Width="*" />
 
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <StackPanel Margin= "10,10,0,0" Padding="0,0,10,0" x:Name="ButtonStackPanel" Grid.Row="0" Grid.Column="0"  Grid.ColumnSpan="1"   Width="Auto" VerticalAlignment="Top" Height="Auto"     >
-            <Button x:Name="SelectAllButton" ToolTipService.ToolTip="Select all items in history." Tapped="SelectAllHistory" HorizontalAlignment="Stretch"   Margin="0,0,0,5"   Height="Auto">
-                <StackPanel Orientation="Horizontal" >
-                    <SymbolIcon  Symbol="SelectAll"/>
-                    <TextBlock  Text="Select All"  Margin="5"/>
+        <StackPanel Margin="10,10,0,0" Padding="0,0,10,0" x:Name="ButtonStackPanel" Grid.Row="0" Grid.Column="0"
+                    Width="Auto" VerticalAlignment="Top" Height="Auto">
+            <Button x:Name="SelectAllButton" ToolTipService.ToolTip="Select all items in history."
+                    Tapped="SelectAllHistory" HorizontalAlignment="Stretch" Margin="0,0,0,5" Height="Auto">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Symbol="SelectAll" />
+                    <TextBlock Text="Select All" Margin="5" />
                 </StackPanel>
             </Button>
-            <DropDownButton x:Name="SaveSelectedButton" ToolTipService.ToolTip="Save selected barcodes." HorizontalAlignment="Stretch"   Margin="0,0,0,5"   Height="Auto">
-                <StackPanel Orientation="Horizontal" >
-                    <SymbolIcon  Symbol="SaveLocal"/>
-                    <TextBlock  Text="Save Selected"  Margin="5"/>
+            <DropDownButton x:Name="SaveSelectedButton" ToolTipService.ToolTip="Save selected barcodes."
+                            HorizontalAlignment="Stretch" Margin="0,0,0,5" Height="Auto">
+                <StackPanel Orientation="Horizontal">
+                    <SymbolIcon Symbol="SaveLocal" />
+                    <TextBlock Text="Save Selected" Margin="5" />
                 </StackPanel>
                 <DropDownButton.Flyout>
                     <MenuFlyout Placement="Bottom">
@@ -50,17 +54,21 @@
 
             </DropDownButton>
 
-            <Button x:Name="DeleteFromHistoryButton"  ToolTipService.ToolTip="Delete the selected items from your history" VerticalAlignment="Bottom" HorizontalAlignment="Stretch"  Margin="0,0,0,5" Tapped="DeleteFromHistory" Height="Auto" >
+            <Button x:Name="DeleteFromHistoryButton"
+                    ToolTipService.ToolTip="Delete the selected items from your history" VerticalAlignment="Bottom"
+                    HorizontalAlignment="Stretch" Margin="0,0,0,5" Tapped="DeleteFromHistory" Height="Auto">
                 <StackPanel Orientation="Horizontal">
-                    <SymbolIcon  Symbol="Delete" Foreground="Red" Opacity=".5"/>
-                    <TextBlock Text="Delete Selected"   Margin="5" IsColorFontEnabled="True"/>
+                    <SymbolIcon Symbol="Delete" Foreground="Red" Opacity=".5" />
+                    <TextBlock Text="Delete Selected" Margin="5" IsColorFontEnabled="True" />
                 </StackPanel>
             </Button>
-            <TextBlock x:Name="HistoryCountSelectedTextBlock" FontWeight="SemiBold" Text="0" HorizontalAlignment="Stretch"  Margin="0,0,0,5"  Height="Auto" />
+            <TextBlock x:Name="HistoryCountSelectedTextBlock" FontWeight="SemiBold" Text="0"
+                       HorizontalAlignment="Stretch" Margin="0,0,0,5" Height="Auto" />
 
-            <TextBlock x:Name="HistoryCountTextBlock" FontWeight="SemiBold" Text="0" HorizontalAlignment="Stretch"  Margin="0,0,0,5"  Height="Auto" />
+            <TextBlock x:Name="HistoryCountTextBlock" FontWeight="SemiBold" Text="0" HorizontalAlignment="Stretch"
+                       Margin="0,0,0,5" Height="Auto" />
         </StackPanel>
-        <ListView x:Name="HistoryList" Grid.Row="0" Grid.Column="1" Margin="0,8,10,10"   SelectionMode="Multiple"   />
+        <ListView x:Name="HistoryList" Grid.Row="0" Grid.Column="1" Margin="0,8,10,10" SelectionMode="Multiple" />
 
     </Grid>
 
