--- a/barcodrod.io/Views/ShellPage.xaml
+++ b/barcodrod.io/Views/ShellPage.xaml
@@ -17,12 +17,12 @@
                    HorizontalAlignment="Left"
                    Width="16"
                    Height="16"
-                   Margin="4,0,0,0"/>
+                   Margin="4,0,0,0" />
             <TextBlock x:Name="AppTitleBarText"
                        VerticalAlignment="Center"
                        TextWrapping="NoWrap"
                        Style="{StaticResource CaptionTextBlockStyle}"
-                       Margin="28,0,0,0"/>
+                       Margin="28,0,0,0" />
 
         </Grid>
         <NavigationView
@@ -34,22 +34,24 @@
             SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
             IsSettingsVisible="True"
             ExpandedModeThresholdWidth="200"
-            DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
->
+            DisplayModeChanged="NavigationViewControl_DisplayModeChanged">
             <NavigationView.MenuItems>
-                <NavigationViewItem x:Uid="Shell_Decode" helpers:NavigationHelper.NavigateTo="barcodrod.io.ViewModels.DecodeViewModel">
+                <NavigationViewItem x:Uid="Shell_Decode"
+                                    helpers:NavigationHelper.NavigateTo="barcodrod.io.ViewModels.DecodeViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xED14;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xED14;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="Shell_Encode" helpers:NavigationHelper.NavigateTo="barcodrod.io.ViewModels.EncodeViewModel">
+                <NavigationViewItem x:Uid="Shell_Encode"
+                                    helpers:NavigationHelper.NavigateTo="barcodrod.io.ViewModels.EncodeViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xED63;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xED63;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="Shell_History" helpers:NavigationHelper.NavigateTo="barcodrod.io.ViewModels.HistoryViewModel">
+                <NavigationViewItem x:Uid="Shell_History"
+                                    helpers:NavigationHelper.NavigateTo="barcodrod.io.ViewModels.HistoryViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE81C;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE81C;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
             </NavigationView.MenuItems>
